--- a/repair.html
+++ b/repair.html
@@ -39,14 +39,57 @@
     <section>
       <div class="col-1">
         <div class="col-2">
-          <p>wlcome to repair agency</p>
-          <h1>We are <br />Professional <br /><span>Repair</span> service</h1>
-          <div class="button">
-            <button>our Project</button>
-            <button>contact us</button>
+          <br />
+          <h6><span></span> WELCOME TO REPAIR AGENCY</h6>
+          <h1>We are<br />Professional<br /><span>Repair</span> service</h1>
+          <div class="b">
+            <button>Our Project</button>
+            <button class="b1">Contact Us</button>
           </div>
         </div>
       </div>
     </section>
+    <div class="col-3">
+      <h6>WORKING WITH EXCELLENT</h6>
+      <h1>
+        We Repair Everything <br />
+        That You Need
+      </h1>
+      <span></span>
+      <span id="spn2"></span>
+    </div>
+    <div class="main2">
+      <div class="card-1">
+        <head>
+          <img src="./imags/hand.png" alt="" />
+        </head>
+        <h2>
+          Complicated <br />
+          Repair
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </div>
+      <div class="card-2">
+        <head>
+          <img src="./imags/dril.png" alt="" />
+        </head>
+        <h2>Service Cases</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <footer>
+          <button>Learn More</button>
+        </footer>
+      </div>
+      <div class="card-3">
+        <head>
+          <img src="./imags/phn_repair.png" alt="" />
+        </head>
+        <h2>Gadget Repair</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <footer><button>Learn More</button></footer>
+      </div>
+    </div>
   </body>
 </html>
